--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -4,11 +4,26 @@
     color: #696563 !important;
 }
 
-.nav-link {
+.navlink {
     color: black !important;
     font-weight: bolder;
     font-size: large;
     font-family: Arial;
     padding-top: 17px;
     padding-right: 12px !important;
+}
+
+.div {
+    color: black !important;
+    font-weight: bolder;
+    font-family: Arial;
+    font-size: large;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.navItem {
+    font-size: large;
+    font-family: Arial;
+    padding-top: 10px;
 }
