--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -13,6 +13,10 @@
     padding-right: 12px !important;
 }
 
+.nav-tabs, .nav-link {
+    border: none !important;
+}
+
 .div {
     color: black !important;
     font-weight: bolder;
@@ -26,4 +30,8 @@
     font-size: large;
     font-family: Arial;
     padding-top: 10px;
+}
+
+.col-sm-3, .col-sm-9 {
+    padding: 0px !important;
 }
