--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -5,7 +5,7 @@
 }
 
 .navlink {
-    color: black !important;
+    color: #696563 !important;
     font-weight: bolder;
     font-size: large;
     font-family: Arial;
@@ -18,7 +18,7 @@
 }
 
 .div {
-    color: black !important;
+    color: #696563 !important;
     font-weight: bolder;
     font-family: Arial;
     font-size: large;
