test styling changed

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -121,3 +121,11 @@
 .padding5-13{
     padding: 5px 13px !important;
 }
+
+.color-61{
+    color:#615b5be0 !important;
+}
+
+.color-00{
+    color:#000000db;
+}
