bookit component styling fixed.

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -129,3 +129,12 @@
 .color-00{
     color:#000000db;
 }
+
+.reffrn-btn{
+    padding: 35px 70px;
+}
+
+.booktreat-btn{
+    padding: 35px 80px;
+    margin-right: 25px;
+}
