--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -22,7 +22,7 @@
     font-weight: bolder;
     font-family: Arial;
     font-size: large;
-    padding: 0px  0px 25px 15px;
+    padding: 0px 0px 25px 15px;
 }
 
 .navItem {
@@ -35,7 +35,7 @@
     padding: 0px !important;
 }
 
-.button{
+.button {
     background-color: white;
     color: #424242cc;
     border: 1px solid;
@@ -56,7 +56,7 @@
     color: black;
 }
 
-.service-btn{
+.service-btn {
     background-color: white !important;
     color: #000000ab !important;
     border: 1px solid;
@@ -68,45 +68,46 @@
     font-family: sans-serif;
 }
 
-.border{
+.border {
     border: 1.5px solid #867f7f !important;
     margin-top: 30px;
 }
 
-.icon{
+.icon {
     font-size: xx-large;
     float: left;
 }
 
-.label{
+.label {
     float: left;
     padding: 3px 15px;
-    color:#6a6d6f;
+    color: #6a6d6f;
 }
 
-.color-48{
-    color:#484747e3;
+.color-48 {
+    color: #484747e3;
 }
-.inherit{
+
+.inherit {
     padding-left: inherit;
 }
 
-.h5{
-    color:#2e2b2bf2;
+.h5 {
+    color: #2e2b2bf2;
     padding: 10px 20px;
     max-width: 715px;
     font-family: Arial;
 }
 
-.bgcolor-e3{
+.bgcolor-e3 {
     background-color: #e3e1e1;
 }
 
-.rm-padding{
+.rm-padding {
     padding: 0px;
 }
 
-.pmt-heading{
+.pmt-heading {
     color: #484747e3 !important;
     font-weight: bolder;
     font-size: x-large;
@@ -114,27 +115,89 @@
     font-family: Arial;
 }
 
-.padding-btm20{
+.padding-btm20 {
     padding-bottom: 20px;
 }
 
-.padding5-13{
+.padding5-13 {
     padding: 5px 13px !important;
 }
 
-.color-61{
-    color:#615b5be0 !important;
+.color-61 {
+    color: #615b5be0 !important;
 }
 
-.color-00{
-    color:#000000db;
+.color-00 {
+    color: #000000db;
 }
 
-.reffrn-btn{
+.reffrn-btn {
     padding: 35px 70px;
 }
 
-.booktreat-btn{
+.booktreat-btn {
     padding: 35px 80px;
     margin-right: 25px;
+}
+
+.verticle-line {
+    border-right: 2px solid black;
+    max-height: 587px;
+    margin-right: 15px;
+    padding-left: 0px;
+}
+
+
+.verticle-point {
+    padding-left: 96%;
+    position: absolute;
+    color: black;
+    z-index: -1;
+}
+
+.padding-top-14 {
+    padding-top: 14px;
+}
+
+.padding-top-55 {
+    padding-top: 55px;
+}
+
+.padding-top-96 {
+    padding-top: 96px;
+}
+
+.padding-top-137 {
+    padding-top: 137px;
+}
+
+
+@media screen and (max-width: 998px) {
+    .verticle-point {
+        visibility: hidden;
+    }
+
+    .verticle-line {
+        border: none;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+
+    .padding-top-14 {
+        padding-top: 24px;
+    }
+
+    .padding-top-55 {
+        padding-top: 81px;
+    }
+
+    .padding-top-96 {
+        padding-top: 122px;
+    }
+
+    .padding-top-137 {
+        padding-top: 163px;
+    }
+
 }
